changed #wrap style to #content-wrap to fix bug reported in ticket #786.

--- a/wp-content/themes/citytech/style.css
+++ b/wp-content/themes/citytech/style.css
@@ -624,12 +624,11 @@ input.wpcf7-submit, .filter input[type="submit"] {
     font-size: 12px;
 }
 
-/* Wrap -- EVENTUALLY WOULD LIKE TO RENAME ONE OF THESE IN THE TEMPLATES TO DISTINGUISH THEM
+/* Wrap
 ------------------------------------------------------------ */
 
 /* This is the whole page wrap, is it necessary? Or could we use it to set the page width, and eliminate the other .wrap elements? */
-#content-wrap,
-#header-wrap{
+#content-wrap {
     background-color: #fff;
     width: 100% !important;
     padding: 40px 0 0 0;
